--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div id="image"></div>
+    <div class="img-container">
+        <div id="background"></div>
+    </div>
     <script src="js/app.js"></script>
 </body>
 </html>
